Added first js ever
Added js to calculate average cost in a city

--- a/index.html
+++ b/index.html
@@ -75,6 +75,16 @@
         </div>
     </section>
 
+    <section>
+        <h2>This is a trial</h2>
+        <button onclick="showRentCost('Madrid')">Madrid</button>
+        <button onclick="showRentCost('Barcelona')">Barcelona</button>
+        <button onclick="showRentCost('Paris')">Paris</button>
+        <button onclick="showRentCost('Berlin')">Berlin</button>
+        <button onclick="showRentCost('London')">London</button>
+        <p id="avgrent">Click on the buttons and see how much average rent is on each city</p>
+    </section>
+
     <footer>
         <div class="footerinfo">
             <h2 class="h2footer">Go free, now</h2>
@@ -108,5 +118,6 @@
         <p class="compliancetxt">Privacy Policy</p>
         <p class="compliancetxt">Terms of service</p>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
