Added Bento grid
added bento box grid in about section

--- a/about.html
+++ b/about.html
@@ -40,7 +40,38 @@
         <section class="centered">
             <h2>All your lifetime mortgage payments, centralized</h2>
             <h3 class="subtitle">Get a mortgage that goes with you any time you want to move cities. Is that simple.</h3>
-            <img src="images/finance.svg" alt="Woman interacting with finance graphics illustration">
+            <div class="grid-container">
+                <div class="grid-item">
+                  <h2>A simple mortgage</h2>
+                  <p>Nulla gravida sapien sem, et lobortis eros aliquet hendrerit. Ut maximus nulla lectus.</p>
+                  <img src="" alt="">
+                </div>
+                  <div class="grid-item">
+                  <h2>Get your mortage everywhere</h2>
+                  <p>Suspendisse sollicitudin erat quam, sed ullamcorper dolor sodales at. Suspendisse fermentum eu est nec aliquet.</p>
+                  <img src="" alt="">
+                </div>
+                  <div class="grid-item">
+                  <h2>App centralized</h2>
+                  <p>Praesent vitae arcu sed odio posuere finibus id vitae tellus. Suspendisse tristique lectus leo.</p>
+                  <img src="" alt="">
+                </div>
+                  <div class="grid-item">
+                  <h2>Full transparency</h2>
+                  <p>Nam eget ultrices lacus. Nullam feugiat nisi eu consectetur dapibus. Suspendisse viverra.</p>
+                  <img src="" alt="">
+                </div>
+                  <div class="grid-item">
+                  <h2>Monthly payments</h2>
+                  <p>Etiam lobortis tellus dui, a tincidunt ligula auctor id. Aliquam odio tellus, cursus ut nunc sed, convallis.</p>
+                  <img src="" alt="">
+                </div>
+                  <div class="grid-item">
+                  <h2>Best NPS</h2>
+                  <p>Praesent lacinia euismod justo, eu ullamcorper urna. Vestibulum dignissim lobortis bibendum.</p>
+                  <img src="" alt="">
+                </div>
+              </div>
         </section>
 
         <section class="imgtxtdiv">
