Some small mods in HTML

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="styles.css">
         <title>Flexible mortgages for the new world</title>
         <link rel="icon" href="images/Flowlogo.png">
-        <meta name="description" content="Flow is the new way to own a property. We aim to make everyone's live more fun, flexible and global."/>
+        <meta name="description" content="Flow is the new way to own a property. We aim to make everyone's live more fun, flexible and global.">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -20,10 +20,10 @@
         <button>Get a call</button>
     </nav>
 
-    </header id="hero">
+    <header id="hero">
         <h1 id="herotitle">A new way to live, globally. </h1>
         <h3 class="subtitle">Flow is the first mortgage that allows you to swap homes, whenever you want.</h3>
-        <img class="headerimg" src="images/house.svg">
+        <img class="headerimg" src="images/house.svg" alt="An illustration of a house">
         <div id="herobuttons">           
             <button class="btnorange">More info</button>
             <button class="herobtncalculate">Calculate</button>
@@ -97,7 +97,6 @@
                 </div>
             </div>
         </div>
-            <div></div>
             <div class="footerlinks">
                 <h3 class="footerlinkstitle">Product</h3>
                 <p class="pfooterlinks">Flow's flexible mortgage</p>
